fix(mail-list): progress not centered

--- a/src/pages/app/mail-list.css
+++ b/src/pages/app/mail-list.css
@@ -71,6 +71,15 @@
   justify-content: space-between;
 }
 
+.action-item {
+  flex: 1;
+}
+
+.action-item > .btn.compact {
+  width: 120px;
+  margin-left: auto;
+}
+
 .results-data {
   font-size: 14px;
   font-weight: bolder;
